Kubernetes/manifest/services.yml
apiVersion: v1
kind: Service
metadata:
  name: go-webapp
  labels:
    app: go-webapp
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: go-webapp
  type: NodePort
