Kubernetes/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules:
  - host: go-webapp.local
    http:
      paths: 
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-webapp
            port:
              number: 80
